<resources>
    <string name="app_name">My Application</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Log in</string>
    <string name="email">username</string>
    <string name="pass">password</string>
    <string name="text1">Don\'t have an account?</string>
    <string name="SignUp">Sign up</string>
    <string name="SignInText">Sign In</string>
    <string name="secondView">Meetrix Delivery</string>
    <string name="ordering">Order your Food</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="tp">Telephone</string>
    <string name="Email">Email</string>
    <string name="Register">Register</string>
    <string name="cat">Category</string>
    
    <string-array name="names">
        <item>Rice and Curry</item>
        <item>Fried Rice</item>
        <item>Kottu</item>

    </string-array>
</resources>
